# python-template

./: README.md  mypy.ini  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
src/: main.py
src/backend/: api.py
src/hw1/: calculator.py
tests/: test_1.py
