[project]
name = "hw1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jimmy Shong", email = "jimmysh341@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
